fix header gap

--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -249,9 +249,9 @@ footer{
 }
 
 body {
-  min-height: 100vh;
-  background: #f0f0f0;
-
+    min-height: 100vh;
+    background: #f0f0f0;
+    font-size: 19px;
 }
 
 .side-navbar {
@@ -513,7 +513,7 @@ header a{
     height: 200px;
     position: absolute;
     top: -20%;
-    left: 25%;
+    left: 10%;
 }
 
 .donate-img{
@@ -539,7 +539,7 @@ header a{
 .text-logo{
     position: absolute;
     top: 80%;
-    left: 7%;
+    left: 10%;
     color: #ffcd00;
 }
 
@@ -554,8 +554,31 @@ header a{
     height: 170px;
     width: 250px;
     padding: 10px;
-    border-radius: 18px;
-    background: #f0f0f0;
-    box-shadow:  6px 6px 12px #c7c7c7,
-                 -6px -6px 12px #ffffff;
+    border-radius: 15px;
+        background: #f0f0f0;
+        box-shadow:  6px 6px 12px #c7c7c7, -6px -6px 12px #ffffff;
+}
+
+.donate-button:focus{
+    animation-name: press;
+    animation-duration: 0.10s;
+}
+
+@keyframes press{
+    0% {
+        border-radius: 15px;
+        background: #f0f0f0;
+        box-shadow:  6px 6px 12px #c7c7c7, -6px -6px 12px #ffffff;}
+    50% {
+        border-radius: 15px;
+        background: linear-gradient(145deg, #d8d8d8, #ffffff);
+        box-shadow:  5px 5px 10px #cecece,
+                    -5px -5px 10px #ffffff;
+    }
+    100% {
+        border-radius: 15px;
+        background: #f0f0f0;
+        box-shadow: inset 5px 5px 10px #cecece,
+                    inset -5px -5px 10px #ffffff;
+    }
 }
